2004-12-12  Adam Heath  <doogie@brainfood.com>

	* libraries/javalib/Makefile.am, libraries/javalib/Makefile.in,
	  tools/gjdoc/javalib/Makefile.am, tools/gjdoc/javalib/Makefile.in:
	  Reworked jar creation stuff, to not be verbose, and handle the
	  case if ctrl-c is hit before all the jar cmds from completing.

2004-12-12  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/kaffevm/jni/jni-base.c
	(KaffeJNI_ParseArgs): Fixed parsing of the '-D' option.
	
2004-12-12  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/kaffe-gc/Makefile.am (AM_CPPFLAGS): 
	Added missing engine includes.

	Reported by:  Arnaud Vandyck <avdyk@gnu.org>

	* kaffe/kaffevm/kaffe-gc/Makefile.in:
	Regenerated.

2004-12-12  Konstantinos Margaritis <markos@debian.gr>

	* kaffe/kaffe/main.c: Improved error message
	when user asks to run Something.class.

2004-12-12  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/man/kaffe.1.in: Updated the dates and versions a bit.
	This file will need a bit of work.

2004-12-12  Dalibor Topic  <robilad@kaffe.org>

	* config/ia64/linux/config.frag:
	Work around bug in gcc optimizer on ia64 by reducing 
	optimizationlevel to -O1.
	
2004-12-12  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/java/awt/Component.java:
	Resynced with GNU Classpath. Whitespace changes.
	
2004-12-12  Adam Heath  <doogie@brainfood.com>

	* kaffe/kaffevm/thread.c, kaffe/kaffevm/thread.h:
	  Back out last change to these files, it caused test cases to
	  fail.

2004-12-12  Adam Heath  <doogie@brainfood.com>

	* kaffe/kaffevm/jni/jni-string.c, kaffe/kaffevm/jni/jni_funcs.h:
	  Remove const declaration from 3rd parameter of
	  KaffeJNI_ReleaseStringUTFChars.

2004-12-12  Adam Heath  <doogie@brainfood.com>

	* kaffe/kaffevm/utf8const.c, kaffe/kaffevm/jni/jni-string.c,
	  kaffe/kaffevm/systems/unix-pthreads/syscalls.c,
	  libraries/clib/awt/classpath-gtk/gtk-peer/gnu_java_awt_peer_gtk_GdkGraphics.c:
	  Signed/unsigned warning fixes(size_t kinda stuff).
